# deltaman

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: default.yml  main.yml  pack.yml  pypi.yml
deltaman/: __init__.py  delta.lark  delta_parser.py
tests/: test_parser.py
